[gd_scene load_steps=6 format=3 uid="uid://7cj62niu6y0m"]

[ext_resource type="Script" path="res://main.gd" id="1_kmhnd"]
[ext_resource type="PackedScene" uid="uid://cq03c8lxhl22t" path="res://UI/Menu/menu_button.tscn" id="2_1xgvu"]
[ext_resource type="PackedScene" uid="uid://drvvnirtyvu6g" path="res://UI/Player/PlayerCanvas.tscn" id="3_fhkfp"]
[ext_resource type="PackedScene" uid="uid://c66khec1ryedj" path="res://InputTransform.tscn" id="4_43vby"]

[sub_resource type="Theme" id="Theme_xym6h"]
CheckButton/font_sizes/font_size = 8

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_kmhnd")
player_canvas_path = NodePath("Mount/MarginContainer/MainWindow/HSplitContainer/VSplitContainer/PanelContainer/PlayerCanvas")
file_button_path = NodePath("Mount/MarginContainer/MainWindow/MenuBar/FileButton")

[node name="Mount" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Mount"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MainWindow" type="VSplitContainer" parent="Mount/MarginContainer"]
layout_mode = 2

[node name="MenuBar" type="HSplitContainer" parent="Mount/MarginContainer/MainWindow"]
layout_mode = 2

[node name="FileButton" parent="Mount/MarginContainer/MainWindow/MenuBar" instance=ExtResource("2_1xgvu")]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="Mount/MarginContainer/MainWindow"]
layout_mode = 2
size_flags_vertical = 3

[node name="VSplitContainer" type="VSplitContainer" parent="Mount/MarginContainer/MainWindow/HSplitContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Mount/MarginContainer/MainWindow/HSplitContainer/VSplitContainer"]
custom_minimum_size = Vector2(600, 450)
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerCanvas" parent="Mount/MarginContainer/MainWindow/HSplitContainer/VSplitContainer/PanelContainer" instance=ExtResource("3_fhkfp")]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch = true
stretch_shrink = 2

[node name="FrameSizeLabel" type="Label" parent="Mount/MarginContainer/MainWindow/HSplitContainer/VSplitContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "512x512"

[node name="TabContainer2" type="TabContainer" parent="Mount/MarginContainer/MainWindow/HSplitContainer/VSplitContainer"]
custom_minimum_size = Vector2(425, 150)
layout_mode = 2
size_flags_vertical = 3

[node name="Animation" type="CenterContainer" parent="Mount/MarginContainer/MainWindow/HSplitContainer/VSplitContainer/TabContainer2"]
layout_mode = 2

[node name="AnimationTree" type="CenterContainer" parent="Mount/MarginContainer/MainWindow/HSplitContainer/VSplitContainer/TabContainer2"]
visible = false
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Mount/MarginContainer/MainWindow/HSplitContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Mount/MarginContainer/MainWindow/HSplitContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 18

[node name="TransformLabel" type="Label" parent="Mount/MarginContainer/MainWindow/HSplitContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(333, 40)
layout_mode = 2
size_flags_horizontal = 0
text = "Transform"

[node name="Position" parent="Mount/MarginContainer/MainWindow/HSplitContainer/PanelContainer/VBoxContainer" instance=ExtResource("4_43vby")]
layout_mode = 2
transformName = "Position"

[node name="Rotation" parent="Mount/MarginContainer/MainWindow/HSplitContainer/PanelContainer/VBoxContainer" instance=ExtResource("4_43vby")]
layout_mode = 2
transformName = "Rotation"

[node name="Scale" parent="Mount/MarginContainer/MainWindow/HSplitContainer/PanelContainer/VBoxContainer" instance=ExtResource("4_43vby")]
layout_mode = 2
transformName = "Scale"

[node name="HSeparator" type="HSeparator" parent="Mount/MarginContainer/MainWindow/HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="PostProcessingLabel" type="Label" parent="Mount/MarginContainer/MainWindow/HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Post-processing"

[node name="ColorShader" type="HBoxContainer" parent="Mount/MarginContainer/MainWindow/HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ColorShader" type="Label" parent="Mount/MarginContainer/MainWindow/HSplitContainer/PanelContainer/VBoxContainer/ColorShader"]
layout_mode = 2
text = "Color Shader"

[node name="BackgroundShader" type="CheckButton" parent="Mount/MarginContainer/MainWindow/HSplitContainer/PanelContainer/VBoxContainer/ColorShader"]
layout_mode = 2
theme = SubResource("Theme_xym6h")

[node name="ColorPalette" type="HBoxContainer" parent="Mount/MarginContainer/MainWindow/HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ColorPalette" type="Label" parent="Mount/MarginContainer/MainWindow/HSplitContainer/PanelContainer/VBoxContainer/ColorPalette"]
layout_mode = 2
text = "Color Palette"

[node name="Label" type="Label" parent="Mount/MarginContainer/MainWindow/HSplitContainer/PanelContainer/VBoxContainer/ColorPalette"]
layout_mode = 2
text = "Empty"

[node name="Button" type="Button" parent="Mount/MarginContainer/MainWindow/HSplitContainer/PanelContainer/VBoxContainer/ColorPalette"]
layout_mode = 2
text = "Search"

[node name="PlayAnimation" type="Button" parent="Mount/MarginContainer/MainWindow/HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
auto_translate = false
action_mode = 0
text = "PlayAnimation"

[connection signal="transformChanged" from="Mount/MarginContainer/MainWindow/HSplitContainer/PanelContainer/VBoxContainer/Position" to="." method="_on_position_transform_changed"]
[connection signal="transformChanged" from="Mount/MarginContainer/MainWindow/HSplitContainer/PanelContainer/VBoxContainer/Rotation" to="." method="_on_rotation_transform_changed"]
[connection signal="transformChanged" from="Mount/MarginContainer/MainWindow/HSplitContainer/PanelContainer/VBoxContainer/Scale" to="." method="_on_scale_transform_changed"]
[connection signal="toggled" from="Mount/MarginContainer/MainWindow/HSplitContainer/PanelContainer/VBoxContainer/ColorShader/BackgroundShader" to="." method="_on_background_shader_toggled"]
[connection signal="button_down" from="Mount/MarginContainer/MainWindow/HSplitContainer/PanelContainer/VBoxContainer/PlayAnimation" to="." method="_on_run_annimation_button_down"]
